fix broken css file that messed up UI

--- a/eusay/static/css/style.css
+++ b/eusay/static/css/style.css
@@ -117,8 +117,6 @@ body {
 .red {
     color: red;
 }
-.green {
-    color: green;
 .tri {
     font-size: 1.3em;
 }
